<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">RideKeeper 3</string>

	<string-array name="drawer_menu_title_array">
        <item>RideKeeper</item>
        <item>My Profile</item>
        <item>Settings</item>
    </string-array>
	<string-array name="tabs_title_array">
        <item>Vehicles Being Stolen</item>
        <item>My Vehicles</item>
        <item>My Rides</item>
    </string-array>
    <string name="account_required">An account is required to use this application.</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_year">Year</string>
    <string name="vehicle_liscense">License</string>
    <string name="vehicle_make_hint">Make</string>
    <string name="vehicle_model_hint">Model</string>
    <string name="vehicle_liscense_hint">License</string>
    <string name="vehicle_year_hint">Year</string>
    <string name="vehicle_tracker_id">Tracker ID</string>
    <string name="vehicle_tracker_id_hint">Tracker ID</string>
    <string name="modify_tracker">Modify</string>
    
    <string name="button_signup">Sign Up</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_resetpwd">Reset password</string>
    <string name="button_exit">Exit</string>
    
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_button_alert_ok">OK</string>
    <string name="title_button_alert_cancel">Cancel</string>
    <string name="button_change">Change</string>
    <string name="owner_display_name">Name</string>
    <string name="owner_name_hint">Your name here</string>
    <string name="owner_information_title">Owner Information</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_emergency_status">Status</string>
    <string name="user_profile_emergency_status_hint">Status of vehicle</string>
    <string name="user_profile_emergency_contact">Contact</string>
    <string name="user_profile_emergency_contact_hint">Enter phone or email here</string>
    <string name="user_profile_email_hint">Email</string>
    <string name="user_profile_phone">Phone</string>
    <string name="user_profile_phone_hint">Phone</string>
    <string name="user_profile_summary">Names, Email, Class, etc</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_vehicle_photo">Vehicle photo</string>
    <string name="camara_photo_picker_dialog">Take from camera</string>
    <string name="gallery_photo_picker_dialog">Select from gallery</string>
    <string name="photo_picker_tag">photo picker tag</string>
    <string name="profile_photo_picker_title">Select profile image</string>
    <string name="photo_picker_title">Select an image</string>
    <string name="vehicle_map_title">Map Dialog</string>

    <string-array name="photo_picker_items">
        <item>Take picture from camera</item>
        <item>Select from gallery</item>
    </string-array>

    <string name="menu_vehicle_options"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_addvehicle">Add vehicle</string>
    <string name="action_refreshvbslist">Refresh</string>
    
    <string name="signup_status">Creating your account</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="vehicle_not_found">Vehicle location not found</string>
    <string name="confirm_vehicle_recovered">Has your vehicle been recovored?</string>
    <string name="query_exception">Unable to retrieve data</string>
    
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="start_periodic_updates">Starting periodic location updates.</string>
    <string name="stop_periodic_updates">Stopping periodic location updates.</string>
    <string name="get_last_location">LocationClient connected, getLastLocation()</string>
    <string name="location_client_disconnected">LocationClient is disconnected, using old location.</string>
    <string name="gps_network_not_enabled">Ridekeeper needs to access your location to work properly. Please allow access to your location.</string>
    <string name="open_location_settings">Turn on location access</string>
    <string name="cancel">Cancel</string>


    <!-- Chat strings -->
    <string name="camera_description">Camera</string>
    <string name="send">Send</string>
    <string name="current_user">Me</string>
    <string name="chat_image_description">A user shared an image.</string>

    <!-- Ride strings -->
    <string name="start_ride">Start Ride</string>
    <string name="end_ride">End Ride</string>

     <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
</resources>
